testsuite/poke.pkl/break-diag-3.pk
/* { dg-do compile } */

while (1)
  {
    fun lala = void: { break; } /* { dg-error "" } */
  }
